--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "dependencies": {
     "@popperjs/core": "2.11.8",
+    "axios": "^1.7.7",
     "bootstrap": "5.3.3",
     "chart.js": "4.4.1",
     "core-js": "3.36.0",
     "dropzone": "6.0.0-beta.2",
     "quill": "1.3.7",
+    "sweetalert2": "^11.14.4",
     "vue": "3.4.19",
     "vue-count-to": "1.0.13",
     "vue-flatpickr-component": "11.0.4",
@@ -40,13 +42,13 @@
     "@vue/cli-service": "5.0.8",
     "@vue/compiler-sfc": "3.4.19",
     "@vue/eslint-config-prettier": "9.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "8.56.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-vue": "9.21.1",
     "prettier": "3.2.5",
     "sass": "1.71.1",
-    "sass-loader": "13.3.2",
-    "cross-env": "^7.0.3"
+    "sass-loader": "13.3.2"
   },
   "engines": {
     "node": ">=8 <=21"
