--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@vue/compiler-sfc": "3.4.19",
     "@vue/eslint-config-prettier": "9.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "8.56.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-vue": "9.21.1",
     "prettier": "3.2.5",
